# qft

./: .gitignore  CITATION.cff  LICENSE  README.md  distributed_qft_comparison.json  distributed_qft_comparison.py  distributed_qft_notebook.ipynb  environment_benchmark.py  export_backend_properties.py  fake_manila_v2_backend_properties.json  forward_qft.py  forward_qft_transpile_demo.py  hpc_benchmark.json  laptop_benchmark.json  local_benchmark.json  multidimensional_qft.py  multidimensional_qft_demo.py  multidimensional_qft_notebook.ipynb  pyproject.toml  qft_implementation_metrics.json  qft_implementation_metrics.py  qft_sampler_utils.py  qft_visualization_utils.py  standard_recursive_qft_notebook.ipynb  test_forward_qft.py  test_multidimensional_qft.py
distributed_qft/: distributed_qft_comparison.json  distributed_qft_comparison.py  distributed_qft_comparison_6q_3nodes.json  distributed_qft_notebook.ipynb  test_distributed_qft.py
multidimensional_qft/: multidimensional_qft.py  multidimensional_qft_demo.py  multidimensional_qft_notebook.ipynb  test_multidimensional_qft.py
src/qft/: __init__.py  distributed.py  distributed_blocks.py  multidimensional.py  recursive.py  sampler_utils.py  standard.py  standard_qft.py  standard_recursive_qft.py  visualization.py
src/qft.egg-info/: PKG-INFO  SOURCES.txt
standard_qft/: forward_qft_transpile_demo.py  standard_qft_notebook.ipynb
standard_recursive_qft/: forward_qft.py  forward_qft_transpile_demo.py  standard_recursive_qft_notebook.ipynb  test_forward_qft.py
tests/: test_distributed_qft.py  test_forward_qft.py  test_multidimensional_qft.py  test_qft_package.py
