[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qft"
version = "0.1.0"
description = "A lightweight Quantum Fourier Transform package built on Qiskit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Aarav Shaurya" }
]
keywords = ["quantum", "qiskit", "qft", "quantum-fourier-transform"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "qiskit>=1.0",
]

[project.urls]
Homepage = "https://github.com/aaravshaurya/qft"
Repository = "https://github.com/aaravshaurya/qft"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
