[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qft"
version = "0.1.0"
description = "A lightweight Quantum Fourier Transform package built on Qiskit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Aarav Shaurya" }
]
keywords = ["quantum", "qiskit", "qft", "quantum-fourier-transform"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pylatexenc>=2.10",
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
  "qiskit-ibm-runtime>=0.45",
]

[project.urls]
Homepage = "https://github.com/QuantumFourier/qft"
Repository = "https://github.com/QuantumFourier/qft"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
